Fix jumbotron spacing

--- a/common/static/common/styles/studio/_jumbotron.scss
+++ b/common/static/common/styles/studio/_jumbotron.scss
@@ -48,6 +48,10 @@
     border-radius: 0;
   }
 
+  @include media-breakpoint-up(md) {
+    padding: $spacer * 4;
+  }
+
   .film-logo {
     max-height: 200px;
     max-width: 300px;
